--- a/css/display project/index.html
+++ b/css/display project/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="section">
       <div class="section-title">
-        <h1>Здарова Макс</h1>
+        <h1>Hello world</h1>
         <div class="title-underline"></div>
         <div class="section-center">
           <p>
