--- a/css/units/index.html
+++ b/css/units/index.html
@@ -11,7 +11,7 @@
     <div class="outer">
       <div class="inner"><h2>wazzap bejing</h2></div>
     </div>
-    <h3 class="in">hello ass</h3>
+    <h3 class="in">hello wake</h3>
     <div class="kip">
       <h3 class="at">hello world</h3>
       <h3 class="ot">hello world</h3>
