--- a/css/units/page2.html
+++ b/css/units/page2.html
@@ -8,7 +8,7 @@
     <title>Page 2</title>
   </head>
   <body>
-    <h1>hello dungeon</h1>
+    <h1>hello world</h1>
     <a href="page3.html">3</a>
   </body>
 </html>
